# rtshell-release

./: 0001-do-not-ask-for-users-to-generate-doc.patch  0001-noetic-support-2to3-w.patch  0001-use-root-to-find-install-directory.patch  0002-add-.catkin-to-CMakeLists.txt.patch  0002-fix-for-path-in-rtshell-setup.patch  0002-skip-intut-Generate-documentation-for-setup.py.patch  0002-use-self.root-to-find-dir-in-rtshell_setup.patch  0003-2to3-for-commands-without-.py-extensions.patch  0004-revert-2to3-f-long-becasue-rtshell-use-long-as-varia.patch  0004-revert-2to3-f-long.patch  0005-CMakeLists.txt-use-python3-for-setup-build-fix-https.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  rtcat  rtconf  rtfind  rtls  rtpwd  setup.py  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
hydro/: package.xml
indigo/: package.xml
rpm/: ros-hydro-rtshell.spec  ros-indigo-rtshell.spec  ros-jade-rtshell.spec  ros-kinetic-rtshell.spec  ros-melodic-rtshell.spec  template.spec
rtshell/: actions.py  comp_mgmt.py  fmt.py  gen_comp.py  ilog.py  modmgr.py  plan.py  port_types.py  rtact.py  rtcat.py  rtcheck.py  rtcomp.py  rtcon.py  rtconf.py  rtcryo.py  rtcwd.py  rtdeact.py  rtdel.py  rtdis.py  rtdoc.py  rtexit.py  rtfind.py  rtinject.py  rtinject_comp.py  rtlog.py  rtlog_comps.py  rtls.py  rtmgr.py  rtprint.py  rtprint_comp.py  rtreset.py  rtresurrect.py  rtstart.py  rtstodot.py  rtstop.py  rtteardown.py  rtvlog.py  simpkl_log.py  state_control_base.py  text_log.py
test/: logfile_unittests.py  test_cmds.py  unittests.py
