<?xml version="1.0"?>
<package>
  <name>rtshell</name>
  <version>3.0.1</version>
  <description>
   <p>Shell commands for managing RT-Middleware running on OpenRTM-aist.</p>

   <p><a href = "https://github.com/gbiggs/rtshell/blob/master/doc/cheatsheet/cheatsheet.pdf">cheat sheet</a></p>
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isaac Isao Saito</maintainer>
  <author email="git@killbots.net">Geoffrey Biggs</author>

  <license>EPL</license>
  <url type="website">http://ros.org/wiki/rtshell</url>
  <url type="website">http://www.openrtm.org/pub/OpenRTM-aist/tools/rtshell/3.0/en/rtshell.html</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-setuptools</build_depend>
  <build_depend>python-omniorb</build_depend>

  <run_depend>rtctree</run_depend>
  <run_depend>rtsprofile</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
